--- a/sass/variables/_colors.scss
+++ b/sass/variables/_colors.scss
@@ -1,5 +1,8 @@
 // Use http://chir.ag/projects/name-that-color for naming.
 $color__black: #000000;
 $color__bahama-blue: #006699;
+$color__blumine: #1C526D;
+$color__oxford_blue: #30424B;
+$color__punch: #D94720;
 $color__silver: #cccccc;
 $color__white: #FFFFFF;
