--- a/sass/components/_screen.scss
+++ b/sass/components/_screen.scss
@@ -10,3 +10,10 @@
 .screen_hidden {
   display: none;
 }
+
+.screen__container {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
