--- a/views/game.pug
+++ b/views/game.pug
@@ -25,6 +25,10 @@ html(lang="en")
             div.player-list__cell
           button.button#join-button Join
     
-    
-  
+    div.modal-container.modal-container_hidden
+      div.modal-container__shadow
+      div.modal.modal_hidden
+        h2.modal__title Name?
+        input.modal__text-input(type='text')
+        input.button.modal__submit(type='submit' value="Ok")
         
