Little syntax fixes.

--- a/views/game.pug
+++ b/views/game.pug
@@ -18,9 +18,9 @@ html(lang="en")
       
         div.screen__container
           h1 Zap.
-          p "Here's gamers already in the game. Join into game by pressing button."
+          p Here are gamers already in the game. Join into game by pressing button.
           div.player-list
-            each val in players
+            each val in game_players
               div.player-list__cell= val
           button.button#join-button Join
     
