Socket for updating player list after player add.

--- a/views/game.pug
+++ b/views/game.pug
@@ -4,6 +4,7 @@ html(lang="en")
     title="Zap Server"
     link(rel="stylesheet" type="text/css" href="/static/css/main.css")
     script(src="/static/js/axios.min.js")
+    script(src="/static/js/socket.io.js")
   body
     if game_on
       div.screen#game-screen
