Separated session instance. Create session for user and do it via AJAX callback. Hide join button from UI after user has session..

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -64,6 +64,9 @@ h2 {
   text-transform: uppercase;
   padding: 0.5rem 1.25rem; }
 
+.button_hidden {
+  visibility: hidden; }
+
 .modal-container {
   position: absolute;
   left: 0;
