--- a/views/game.pug
+++ b/views/game.pug
@@ -7,6 +7,7 @@ html(lang="en")
     script(src="/static/js/socket.io.js")
   body
     div.screen#game-screen(class=!game_on && 'screen_hidden')
+      div.deck-container
           
     div.screen.join-screen#join-screen(class=game_on && 'screen_hidden')
       div.screen__container
