Separated pure socket events and functionalities.

--- a/views/game.pug
+++ b/views/game.pug
@@ -24,6 +24,6 @@ html(lang="en")
         h2.modal__title Name?
         input#register-name-field.modal__text-input(type="text")
         input#register-button.button.modal__submit(type="submit" value="Ok")
-          
   
-    script(src="/public/js/join-modal.js")
+    script(src="/public/js/zap-functions.js")
+    script(src="/public/js/zap-socket-events.js")
