--- a/assets/sass/components/_card.scss
+++ b/assets/sass/components/_card.scss
@@ -16,6 +16,15 @@ $card-width: 300px;
   }
 }
 
+@keyframes get {
+  0% { opacity: 0; top: -100%; transform: rotate(10deg); }
+  100% { opacity: 1; top: 0; transform: rotate(0deg); }
+}
+
+.card_get {
+  animation: 1s ease-out 0s 1 get;
+}
+
 @keyframes switch {
   0% { opacity: 1; left: 0; transform: rotate(0deg); }
   50% { opacity: 1; left: 50%; transform: rotate(5deg); }
