--- a/public/css/main.css
+++ b/public/css/main.css
@@ -128,6 +128,19 @@ h2 {
     display: inline-block;
     padding-top: 150%; }
 
+@keyframes get {
+  0% {
+    opacity: 0;
+    top: -100%;
+    transform: rotate(10deg); }
+  100% {
+    opacity: 1;
+    top: 0;
+    transform: rotate(0deg); } }
+
+.card_get {
+  animation: 1s ease-out 0s 1 get; }
+
 @keyframes switch {
   0% {
     opacity: 1;
