Added cardId to card content, before there is graphics added.

--- a/assets/sass/components/_card.scss
+++ b/assets/sass/components/_card.scss
@@ -4,7 +4,9 @@ $card-width: 300px;
   background-color: $color__white;
   border-radius: calc(#{$card-width} / 25);
   box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.75);
+  color: $color__black;
   position: absolute;
+  text-align: center;
   top: 0;
   left: 0;
   width: $card-width;
