--- a/public/css/main.css
+++ b/public/css/main.css
@@ -119,7 +119,9 @@ h2 {
   background-color: #FFFFFF;
   border-radius: calc(300px / 25);
   box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.75);
+  color: #000000;
   position: absolute;
+  text-align: center;
   top: 0;
   left: 0;
   width: 300px; }
